--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext {
+        activity_version = "1.6.1"
+        lifecycle_version = "2.6.1"
+        arch_version = "2.2.0"
+        fragment_version = "1.5.7"
+    }
+}
+
 plugins {
     id 'com.android.application' version '8.0.0' apply false
     id 'com.android.library' version '8.0.0' apply false
